--- a/AdminLTE-3.1.0/pages/examples/Mohit.html
+++ b/AdminLTE-3.1.0/pages/examples/Mohit.html
@@ -228,16 +228,16 @@
     /* MOBILE Responsive */
     @media (max-width: 767px) {
       .welcome-icon {
-        width: 40px !important;
-        /* icon smaller on mobile */
+        width: 30px !important;
+
       }
 
       .welcome-sub {
-        font-size: 14px !important;
+        font-size: 12px !important;
       }
 
       .welcome-title {
-        font-size: 18px !important;
+        font-size: 15px !important;
       }
     }
 
@@ -590,19 +590,12 @@
 
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
-
-
-
-       <!-- Brand Logo -->
-        <a href="../../index3.html" class="brand-link">
-          <img
-            src="../images/klkhalflogo.webp"
-            alt="AdminLTE Logo"
-            class="brand-image img-circle elevation-3"
-            style="opacity: 0.8"
-          />
-          <span class="brand-text text-dark">KLK Ventures-up</span>
-        </a>
+      <!-- Brand Logo -->
+      <a href="../../index3.html" class="brand-link">
+        <img src="../images/klkhalflogo.webp" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+          style="opacity: 0.8" />
+        <span class="brand-text text-dark">KLK Ventures-up</span>
+      </a>
 
       <!-- Sidebar -->
       <div class="sidebar">
@@ -1266,19 +1259,19 @@
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
       <!-- WELCOME SECTION -->
-      <section class="welcome-section py-4 px-3">
+      <section class="welcome-section px-2 py-2 py-md-4">
         <div class="container-fluid">
           <div class="row align-items-center">
             <!-- LEFT SIDE -->
-            <div class="col-md-6 d-flex align-items-center gap-3 mb-3 mb-md-0">
-              <img src="../images/icon (2).svg" class="welcome-icon" style="width: 55px" />
+            <div class="col-md-6 col-10 d-flex align-items-center gap-2 mb-md-0">
+              <img src="../images/icon (2).svg" class="welcome-icon"  style="width: 50px;"/>
               <div>
                 <div class="welcome-sub">Welcome to,</div>
                 <h2 class="welcome-title m-0 fw-bold">KLK UP SSL Dashboard</h2>
               </div>
             </div>
             <!-- RIGHT SIDE -->
-            <div class="col-md-6">
+            <div class="col-md-6 col-2">
               <div class="doc-btn float-right">
                 <i class="bi bi-ui-checks-grid"></i>
                 <span>Select Volume</span>
@@ -1602,8 +1595,6 @@
         },
       },
     });
-
-
 
   </script>
 
