icons chagne in PNG

--- a/AdminLTE-3.1.0/pages/examples/Mohit.html
+++ b/AdminLTE-3.1.0/pages/examples/Mohit.html
@@ -1264,7 +1264,7 @@
           <div class="row align-items-center">
             <!-- LEFT SIDE -->
             <div class="col-md-6 col-10 d-flex align-items-center gap-2 mb-md-0">
-              <img src="../images/icon (2).svg" class="welcome-icon"  style="width: 50px;"/>
+              <img src="../images/icon (2).svg" class="welcome-icon" style="width: 50px;" />
               <div>
                 <div class="welcome-sub">Welcome to,</div>
                 <h2 class="welcome-title m-0 fw-bold">KLK UP SSL Dashboard</h2>
@@ -1291,7 +1291,7 @@
             <div class="col-md-4 col-12">
               <div class="complaint-box blue">
                 <div class="circle-icon blue-border">
-                  <img src="https://cdn-icons-png.flaticon.com/512/3380/3380840.png" alt="target">
+                  <img src="../images/icon1.png" alt="target">
                 </div>
                 <div>
                   <p class="title">Total Allocated Target</p>
@@ -1305,7 +1305,7 @@
             <div class="col-md-4 col-12">
               <div class="complaint-box green">
                 <div class="circle-icon green-border">
-                  <img src="https://cdn-icons-png.flaticon.com/512/3081/3081559.png" alt="material">
+                  <img src="../images/icon2.png" alt="material">
                 </div>
                 <div>
                   <p class="title">Material Supply Status</p>
@@ -1319,7 +1319,7 @@
             <div class="col-md-4 col-12">
               <div class="complaint-box orange">
                 <div class="circle-icon orange-border">
-                  <img src="https://cdn-icons-png.flaticon.com/512/1828/1828843.png" alt="installation">
+                  <img src="../images/icon3.png" alt="installation">
                 </div>
                 <div>
                   <p class="title">Installation</p>
@@ -1333,7 +1333,7 @@
             <div class="col-md-4 col-12">
               <div class="complaint-box red">
                 <div class="circle-icon red-border">
-                  <img src="https://cdn-icons-png.flaticon.com/512/906/906341.png" alt="document">
+                  <img src="../images/icon4.png" alt="document">
                 </div>
                 <div>
                   <p class="title">Document Status</p>
@@ -1347,7 +1347,7 @@
             <div class="col-md-4 col-12">
               <div class="complaint-box purple">
                 <div class="circle-icon purple-border">
-                  <img src="https://cdn-icons-png.flaticon.com/512/2088/2088617.png" alt="payment">
+                  <img src="../images/icon5.png" alt="payment">
                 </div>
                 <div>
                   <p class="title">85% Payment Status</p>
@@ -1361,7 +1361,7 @@
             <div class="col-md-4 col-12">
               <div class="complaint-box teal">
                 <div class="circle-icon teal-border">
-                  <img src="https://cdn-icons-png.flaticon.com/512/3240/3240673.png" alt="AMC Visit">
+                  <img src="../images/icon6.png" alt="AMC Visit">
                 </div>
                 <div>
                   <p class="title">AMC Visit Status</p>
