change select volume select box

--- a/AdminLTE-3.1.0/pages/examples/Mohit.html
+++ b/AdminLTE-3.1.0/pages/examples/Mohit.html
@@ -200,8 +200,6 @@
       }
     }
 
-
-
     /* sidebar css  */
 
     .sidebar {
@@ -213,31 +211,71 @@
     }
 
 
+    /* Welcome Section ---------------------------------------*/
 
-    /* Welcome section  */
-
+    /* Left side text styling */
     .welcome-sub {
-      font-size: 18px;
-      font-weight: 500;
+      font-size: 14px;
+      color: #6c757d;
     }
 
     .welcome-title {
       font-size: 22px;
+      color: #333;
     }
 
-    /* MOBILE Responsive */
-    @media (max-width: 767px) {
-      .welcome-icon {
-        width: 30px !important;
+    /* Custom Select Wrapper */
+    .select-wrapper {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      padding: 0 0 0 20px;
+      border-radius: 50px;
+      background: #e4edfd;
+      color: #495467;
+      font-weight: 500;
+      font-size: 14px;
+      border: 1px solid #e2e6ee;
+      cursor: pointer;
+      transition: 0.2s ease-in-out;
+      width: fit-content;
+    }
 
+    .select-wrapper:hover {
+      background: #fff;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .custom-select {
+      border: none !important;
+      background: none !important;
+      font-size: 14px;
+      color: #495467;
+      font-weight: 500;
+      outline: none !important;
+      cursor: pointer;
+      box-shadow: none !important;
+      padding-right: 13px;
+      appearance: none;
+    }
+
+    /* Responsive font and icon resizing */
+    @media (max-width: 767px) {
+      .welcome-title {
+        font-size: 18px;
       }
 
       .welcome-sub {
-        font-size: 12px !important;
+        font-size: 13px;
       }
 
-      .welcome-title {
-        font-size: 15px !important;
+      .welcome-icon {
+        width: 35px !important;
+      }
+
+      .select-wrapper {
+        padding: 0 0 0 15px;
+        font-size: 12px;
       }
     }
 
@@ -473,6 +511,9 @@
         font-size: 16px;
       }
     }
+
+
+    /* select box ------------------- */
   </style>
 </head>
 
@@ -1258,35 +1299,48 @@
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
-      <!-- WELCOME SECTION -->
-      <section class="welcome-section px-2 py-2 py-md-4">
-        <div class="container-fluid">
-          <div class="row align-items-center">
-            <!-- LEFT SIDE -->
-            <div class="col-md-6 col-10 d-flex align-items-center gap-2 mb-md-0">
-              <img src="../images/icon (2).svg" class="welcome-icon" style="width: 50px;" />
-              <div>
-                <div class="welcome-sub">Welcome to,</div>
-                <h2 class="welcome-title m-0 fw-bold">KLK UP SSL Dashboard</h2>
-              </div>
-            </div>
-            <!-- RIGHT SIDE -->
-            <div class="col-md-6 col-2">
-              <div class="doc-btn float-right">
-                <i class="bi bi-ui-checks-grid"></i>
-                <span>Select Volume</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
 
       <section class="content">
+
+
+        <!-- welcome Section here  -->
+
+        <section class=" py-2 py-md-4">
+          <div class="container-fluid ">
+            <div class="row align-items-center g-2">
+
+              <!-- LEFT -->
+              <div class="col-md-6 col-12 d-flex align-items-center gap-2">
+                <img src="../images/icon (2).svg" class="welcome-icon" style="width: 50px;" />
+                <div>
+                  <div class="welcome-sub">Welcome to,</div>
+                  <h2 class="welcome-title m-0 fw-bold">KLK UP SSL Dashboard</h2>
+                </div>
+              </div>
+
+              <!-- RIGHT -->
+              <div class="col-md-6 col-12 d-flex justify-content-md-end justify-content-center">
+                <div class="select-wrapper">
+                  <i class="bi bi-ui-checks-grid"></i>
+                  <select class="custom-select form-select">
+                    <option selected>All Volume</option>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                  </select>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </section>
+
+
+
 
         <!-- Cards section here  -->
         <div class="container py-3">
           <div class="row g-3">
-
             <!-- Card 1 -->
             <div class="col-md-4 col-12">
               <div class="complaint-box blue">
